<?xml version="1.0"?>
<package>
   <name>capture_audio</name>
   <version>0.0.1</version>
   <description>Captures audio from a microphone and publishes it to a ROS topic. It is also possible to save to file.</description>
   <maintainer email="kalmendoliver@gmail.com">Oliver Kalmend</maintainer>
   <license>BSD</license>

   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>audio_common_msgs</build_depend>
   <build_depend>libgstreamer1.0-dev</build_depend>
   <build_depend>libgstreamer-plugins-base1.0-dev</build_depend>

   <run_depend>roscpp</run_depend>
   <run_depend>audio_common_msgs</run_depend>
   <run_depend>libgstreamer1.0-0</run_depend>
   <run_depend>libgstreamer-plugins-base1.0-0</run_depend>
   <run_depend>gstreamer1.0-plugins-ugly</run_depend>
   <run_depend>gstreamer1.0-plugins-good</run_depend>
</package>
