<?xml version="1.0"?>
<package>
  <name>chatbot</name>
  <version>0.0.1</version>
  <description>The chatbot package</description>
  <maintainer email="kalmendoliver@gmail.com">oliver</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>simple_navigation_goals</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>libjansson-dev</run_depend>
  <run_depend>swi-prolog</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>capture_audio_new</run_depend>
  <run_depend>play_audio_new</run_depend>
  <run_depend>capture_vad_sphinx</run_depend>
  <run_depend>play_audio_speex</run_depend>
  <run_depend>speech_recognition_speex</run_depend>
  <run_depend>speech_recognition_simple</run_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
