<?xml version="1.0"?>
<package>
  <name>chatbot_simulator</name>
  <version>0.0.0</version>
  <description>Stage version of turtlebot simulation for my chatbot</description>
  <maintainer email="kalmendoliver@gmail.com">Oliver Kalmend</maintainer>
  <license>BSD</license>

 <buildtool_depend>catkin</buildtool_depend>
 <run_depend>stage_ros</run_depend>
 <run_depend>navigation</run_depend>
 <run_depend>turtlebot_bringup</run_depend>
 <run_depend>turtlebot_navigation</run_depend>
 <run_depend>yocs_virtual_sensor</run_depend>
 <run_depend>yocs_velocity_smoother</run_depend>

</package>
